--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -9,6 +9,7 @@
 @import './components/buttons';
 @import './components/forms';
 @import './components/tables';
+@import './components/link';
 //layout
 @import './layout/header';
 @import './layout/footer';
