setup config docker and add run for edit

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,4 +27,8 @@ button.secondary:active {
   background-color: #868e96;
 }
 
+a {
+  text-decoration: none;
+}
+
 /*# sourceMappingURL=main.css.map */
