--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -9,7 +9,7 @@
 @import './components/buttons';
 @import './components/forms';
 @import './components/tables';
-@import './components/link';
+@import './components/links';
 //layout
 @import './layout/header';
 @import './layout/footer';
