setup config docker and add run for edit

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,4 +31,14 @@ a {
   text-decoration: none;
 }
 
+.link {
+  color: #007bff;
+}
+.link:hover {
+  color: #0062cc;
+}
+.link:active {
+  color: #3395ff;
+}
+
 /*# sourceMappingURL=main.css.map */
