--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -3,3 +3,11 @@ ol {
     margin-bottom: 20px;
     padding-left: 20px;
 }
+
+//pour bien use nos col 
+.row {
+    clear: both;
+    max-width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+}
