--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,5 +13,6 @@
 //layout
 @import './layout/header';
 @import './layout/footer';
+@import './layout/navbar';
 //@import './layout/sidebar';
 @import './layout/grid';
