--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -95,6 +95,18 @@ a {
   color: #3395ff;
 }
 
+.footer {
+  background-color: #333;
+  height: 60px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  color: white;
+  font-size: 14px;
+}
+
 .navbar {
   background-color: #333;
   height: 60px;
