--- a/assets/sass/components/_links.scss
+++ b/assets/sass/components/_links.scss
@@ -1,5 +1,6 @@
         //remove  underline from links
         a {
+            color: #fff;
             text-decoration: none;
         }
         
