--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -1,7 +1,9 @@
 .navbar {
     background-color: #333;
     height: 60px;
-    width: 100%;
+    //width: 100%;
+    max-width: 100%;
+    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
