--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -10,6 +10,7 @@
 @import './components/forms';
 @import './components/tables';
 @import './components/links';
+@import './components/menu';
 //layout
 @import './layout/header';
 @import './layout/footer';
