--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,225 +1,249 @@
 body,
 html {
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    position: relative;
+    min-height: 100vh;
 }
 
 ul,
 ol {
-  margin-bottom: 20px;
-  padding-left: 20px;
+    margin-bottom: 20px;
+    padding-left: 20px;
 }
 
 .row {
-  clear: both;
-  max-width: 100%;
-  margin-right: auto;
-  margin-left: auto;
+    clear: both;
+    max-width: 100%;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 @font-face {
-  font-family: "Arial Bold Italic";
-  src: url("fonts/ARIALBI.TTF") format("truetype");
-  font-weight: bold;
-  font-style: italic;
+    font-family: "Arial Bold Italic";
+    src: url("fonts/ARIALBI.TTF") format("truetype");
+    font-weight: bold;
+    font-style: italic;
 }
+
 body {
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    line-height: 1.5;
 }
 
 h1 {
-  font-size: 36px;
-  font-weight: bold;
-  margin-bottom: 20px;
+    font-size: 36px;
+    font-weight: bold;
+    margin-bottom: 20px;
 }
 
 h2 {
-  font-size: 24px;
-  font-weight: bold;
-  margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 20px;
 }
 
 p {
-  font-size: 16px;
-  line-height: 1.5;
-  margin-bottom: 20px;
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 20px;
 }
 
 a {
-  font-size: 16px;
-  font-weight: bold;
-  color: blue;
+    font-size: 16px;
+    font-weight: bold;
+    color: blue;
 }
 
 .p-italic {
-  font-family: "Arial Bold Italic", sans-serif;
-  font-style: italic;
+    font-family: "Arial Bold Italic", sans-serif;
+    font-style: italic;
 }
 
 button {
-  background-color: #007bff;
-  border: none;
-  border-radius: 4px;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-size: 16px;
-  padding: 12px 24px;
-  text-align: center;
-  text-decoration: none;
+    background-color: #007bff;
+    border: none;
+    border-radius: 4px;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 16px;
+    padding: 12px 24px;
+    text-align: center;
+    text-decoration: none;
 }
+
 button:hover {
-  background-color: #0062cc;
+    background-color: #0062cc;
 }
+
 button:active {
-  background-color: #3395ff;
+    background-color: #3395ff;
 }
 
 button.secondary {
-  background-color: #6c757d;
+    background-color: #6c757d;
 }
+
 button.secondary:hover {
-  background-color: #545b62;
+    background-color: #545b62;
 }
+
 button.secondary:active {
-  background-color: #868e96;
+    background-color: #868e96;
 }
 
 a {
-  color: #fff;
-  text-decoration: none;
+    color: #fff;
+    text-decoration: none;
 }
 
 .link {
-  color: #007bff;
+    color: #007bff;
 }
+
 .link:hover {
-  color: #0062cc;
+    color: #0062cc;
 }
+
 .link:active {
-  color: #3395ff;
+    color: #3395ff;
 }
 
 .menu {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 .menu-item {
-  margin-right: 20px;
+    margin-right: 20px;
 }
 
 .menu-link {
-  color: #fff;
-  text-decoration: none;
+    color: #fff;
+    text-decoration: none;
 }
 
 .footer {
-  background-color: #333;
-  height: 60px;
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 20px;
-  color: white;
-  font-size: 14px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+}
+
+.footer-menu {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.footer-menu li {
+    margin-right: 20px;
+}
+
+.footer-menu a {
+    color: #333;
+    text-decoration: none;
 }
 
 .navbar {
-  background-color: #333;
-  height: 60px;
-  max-width: 100%;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 20px;
+    background-color: #333;
+    height: 60px;
+    max-width: 100%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
 }
 
 .navbar-brand {
-  font-size: 1.5em;
-  color: #fff;
-  text-decoration: none;
+    font-size: 1.5em;
+    color: #fff;
+    text-decoration: none;
 }
 
 .navbar-nav {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 .navbar-item {
-  font-size: 1.2em;
-  color: #fff;
-  text-decoration: none;
-  padding: 0 10px;
+    font-size: 1.2em;
+    color: #fff;
+    text-decoration: none;
+    padding: 0 10px;
 }
 
 .col-1 {
-  width: 8.3333333333%;
-  float: left;
+    width: 8.3333333333%;
+    float: left;
 }
 
 .col-2 {
-  width: 16.6666666667%;
-  float: left;
+    width: 16.6666666667%;
+    float: left;
 }
 
 .col-3 {
-  width: 25%;
-  float: left;
+    width: 25%;
+    float: left;
 }
 
 .col-4 {
-  width: 33.3333333333%;
-  float: left;
+    width: 33.3333333333%;
+    float: left;
 }
 
 .col-5 {
-  width: 41.6666666667%;
-  float: left;
+    width: 41.6666666667%;
+    float: left;
 }
 
 .col-6 {
-  width: 50%;
-  float: left;
+    width: 50%;
+    float: left;
 }
 
 .col-7 {
-  width: 58.3333333333%;
-  float: left;
+    width: 58.3333333333%;
+    float: left;
 }
 
 .col-8 {
-  width: 66.6666666667%;
-  float: left;
+    width: 66.6666666667%;
+    float: left;
 }
 
 .col-9 {
-  width: 75%;
-  float: left;
+    width: 75%;
+    float: left;
 }
 
 .col-10 {
-  width: 83.3333333333%;
-  float: left;
+    width: 83.3333333333%;
+    float: left;
 }
 
 .col-11 {
-  width: 91.6666666667%;
-  float: left;
+    width: 91.6666666667%;
+    float: left;
 }
 
 .col-12 {
-  width: 100%;
-  float: left;
+    width: 100%;
+    float: left;
 }
+
 
 /*# sourceMappingURL=main.css.map */
