--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -153,7 +153,7 @@ a {
 }
 
 .navbar {
-  background-color: #333;
+  background-color: #fff;
   height: 60px;
   max-width: 100%;
   margin: 0 auto;
@@ -161,6 +161,10 @@ a {
   align-items: center;
   justify-content: space-between;
   padding: 0 20px;
+}
+
+.navbar a {
+  color: #000;
 }
 
 .navbar-brand {
