--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -17,6 +17,11 @@
     padding: 0 10px;
 }
 
+//les boutons à l'intérieur de la navbar  soient center par rapport au lien de la navbar
+.navbar .button {
+    margin: 0 10px;
+}
+
 .navbar-brand {
     font-size: 1.5em;
     color: #fff;
