--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,161 +1,273 @@
+@charset "UTF-8";
 body,
 html {
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-    position: relative;
-    min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
 }
 
 ul,
 ol {
-    margin-bottom: 20px;
-    padding-left: 20px;
+  margin-bottom: 20px;
+  padding-left: 20px;
 }
 
 .row {
-    clear: both;
-    max-width: 100%;
-    margin-right: auto;
-    margin-left: auto;
+  clear: both;
+  max-width: 100%;
+  margin-right: auto;
+  margin-left: auto;
 }
 
-img {
-    max-width: 100%;
-    height: auto;
+img.logo {
+  width: 100px;
+  height: 100px;
+}
+
+.header {
+  min-height: 100vh;
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+  position: relative;
 }
 
 @font-face {
-    font-family: "Arial Bold Italic";
-    src: url("fonts/ARIALBI.TTF") format("truetype");
-    font-weight: bold;
-    font-style: italic;
+  font-family: "Arial Bold Italic";
+  src: url("fonts/ARIALBI.TTF") format("truetype");
+  font-weight: bold;
+  font-style: italic;
 }
-
 body {
-    font-family: Arial, sans-serif;
-    font-size: 16px;
-    line-height: 1.5;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
 }
 
 h1 {
-    font-size: 36px;
-    font-weight: bold;
-    margin-bottom: 20px;
+  font-size: 36px;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
 h2 {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 20px;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
 }
 
 p {
-    font-size: 16px;
-    line-height: 1.5;
-    margin-bottom: 20px;
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 20px;
 }
 
 a {
-    font-size: 16px;
-    font-weight: bold;
-    color: blue;
+  font-size: 16px;
+  font-weight: bold;
+  color: blue;
 }
 
 .p-italic {
-    font-family: "Arial Bold Italic", sans-serif;
-    font-style: italic;
+  font-family: "Arial Bold Italic", sans-serif;
+  font-style: italic;
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px 0;
 }
 
 .footer-menu {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
 
 .footer-menu li {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
 .footer-menu a {
-    color: #333;
-    text-decoration: none;
+  color: #333;
+  text-decoration: none;
 }
 
 .col-1 {
-    width: 8.3333333333%;
-    float: left;
+  width: 8.3333333333%;
+  float: left;
 }
 
 .col-2 {
-    width: 16.6666666667%;
-    float: left;
+  width: 16.6666666667%;
+  float: left;
 }
 
 .col-3 {
-    width: 25%;
-    float: left;
+  width: 25%;
+  float: left;
 }
 
 .col-4 {
-    width: 33.3333333333%;
-    float: left;
+  width: 33.3333333333%;
+  float: left;
 }
 
 .col-5 {
-    width: 41.6666666667%;
-    float: left;
+  width: 41.6666666667%;
+  float: left;
 }
 
 .col-6 {
-    width: 50%;
-    float: left;
+  width: 50%;
+  float: left;
 }
 
 .col-7 {
-    width: 58.3333333333%;
-    float: left;
+  width: 58.3333333333%;
+  float: left;
 }
 
 .col-8 {
-    width: 66.6666666667%;
-    float: left;
+  width: 66.6666666667%;
+  float: left;
 }
 
 .col-9 {
-    width: 75%;
-    float: left;
+  width: 75%;
+  float: left;
 }
 
 .col-10 {
-    width: 83.3333333333%;
-    float: left;
+  width: 83.3333333333%;
+  float: left;
 }
 
 .col-11 {
-    width: 91.6666666667%;
-    float: left;
+  width: 91.6666666667%;
+  float: left;
 }
 
 .col-12 {
-    width: 100%;
-    float: left;
+  width: 100%;
+  float: left;
 }
 
-.navbar {
+nav {
+  display: flex;
+  padding: 2% 6%;
+  justify-content: center;
+  align-items: center;
+  margin: 0 0 0 0;
+  background-color: #fff;
+}
+
+.navv {
+  display: flex;
+  padding: 2% 6%;
+  align-items: center;
+  justify-content: flex-start;
+  justify-content: space-between;
+}
+
+.navv-link {
+  flex: 1;
+  text-align: right;
+}
+
+.navv-link ul li {
+  list-style: none;
+  display: inline-block;
+  padding: 8px 12px;
+  position: relative;
+}
+
+.navv-link ul li a {
+  text-decoration: none;
+  color: #000;
+  font-size: 13px;
+}
+
+/* nav img{
+    width: 30%;
+    height: 30%;
+
+} */
+img.logo {
+  width: 100px;
+  height: 100px;
+}
+
+.nav-link {
+  flex: 1;
+  text-align: right;
+}
+
+.nav-link ul li {
+  list-style: none;
+  display: inline-block;
+  padding: 8px 12px;
+  position: relative;
+}
+
+.nav-link ul li a {
+  text-decoration: none;
+  color: #000;
+  font-size: 13px;
+}
+
+.nav-link ul li::after {
+  content: "";
+  width: 0%;
+  height: 2px;
+  background: #000;
+  display: block;
+  margin: auto;
+  transition: 0.5s;
+}
+
+.nav-link ul li:hover::after {
+  width: 100%;
+}
+
+@media (max-width: 700px) {
+  .text-box h1 {
+    font-size: 20px;
+  }
+  .nav-link ul li {
+    display: block;
+  }
+  .nav-link {
+    position: absolute;
+    background: #f4367f;
+    height: 100vh;
+    top: 0;
+    right: -200px;
+    text-align: left;
+    z-index: 2;
+    transition: 1s;
+  }
+  nav .fas {
+    display: block;
+    color: #fff;
+    margin: 10px;
+    font-size: 22px;
+    cursor: pointer;
+  }
+  .nav-link ul {
+    padding: 30px;
+  }
+}
+/* .navbar {
     background-color: #fff;
     height: 60px;
+    ///width: 100%;
     max-width: 100%;
     margin: 0 auto;
     display: flex;
@@ -166,135 +278,113 @@ a {
 
 .navbar a {
     color: #000;
-    font-size: 1.4em;
+    //faut que les liens soient un peu plus gros
+    font-size: 1em;
     padding: 0 10px;
 }
 
+//les boutons à l'intérieur de la navbar  soient center par rapport au lien de la navbar
 .navbar .button {
     margin: 0 10px;
+    font-size: 1em;
 }
 
-.navbar-brand {
-    font-size: 1.5em;
-    color: #fff;
-    text-decoration: none;
-}
-
-.navbar-nav {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.navbar-item {
-    font-size: 1.2em;
-    color: #fff;
-    text-decoration: none;
-    padding: 0 10px;
-}
-
+@media screen and (max-width: 767px) {
+    .navbar .button {
+        display: block;
+    }
+    .navbar a {
+        display: none;
+    }
+} */
 button {
-    background-color: #007bff;
-    border: none;
-    border-radius: 4px;
-    color: #fff;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 16px;
-    padding: 12px 24px;
-    text-align: center;
-    text-decoration: none;
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 16px;
+  padding: 12px 24px;
+  text-align: center;
+  text-decoration: none;
 }
-
 button:hover {
-    background-color: #0062cc;
+  background-color: #0062cc;
 }
-
 button:active {
-    background-color: #3395ff;
+  background-color: #3395ff;
 }
 
 button.secondary {
-    background-color: #6c757d;
+  background-color: #6c757d;
 }
-
 button.secondary:hover {
-    background-color: #545b62;
+  background-color: #545b62;
 }
-
 button.secondary:active {
-    background-color: #868e96;
+  background-color: #868e96;
 }
 
 button.warning {
-    background-color: #ffc107;
+  background-color: #ffc107;
 }
-
 button.warning:hover {
-    background-color: #d39e00;
+  background-color: #d39e00;
 }
-
 button.warning:active {
-    background-color: #ffce3a;
+  background-color: #ffce3a;
 }
 
 button.info {
-    background-color: #17a2b8;
+  background-color: #17a2b8;
 }
-
 button.info:hover {
-    background-color: #117a8b;
+  background-color: #117a8b;
 }
-
 button.info:active {
-    background-color: #1fc8e3;
+  background-color: #1fc8e3;
 }
 
 button.success {
-    background-color: #28a745;
+  background-color: #28a745;
 }
-
 button.success:hover {
-    background-color: #1e7e34;
+  background-color: #1e7e34;
 }
-
 button.success:active {
-    background-color: #34ce57;
+  background-color: #34ce57;
 }
 
 a {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
 .link {
-    color: #007bff;
+  color: #007bff;
 }
-
 .link:hover {
-    color: #0062cc;
+  color: #0062cc;
 }
-
 .link:active {
-    color: #3395ff;
+  color: #3395ff;
 }
 
 .menu {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .menu-item {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
 .menu-link {
-    color: #fff;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
-
 
 /*# sourceMappingURL=main.css.map */
