--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -1,4 +1,114 @@
-.navbar {
+nav {
+    display: flex;
+    padding: 2% 6%;
+    justify-content: center;
+    align-items: center;
+    //rajouter des marges en haut et en bas
+    margin: 0 0 0 0;
+    background-color: #fff;
+}
+
+.navv {
+    display: flex;
+    padding: 2% 6%;
+    align-items: center;
+    justify-content: flex-start;
+    justify-content: space-between;
+}
+
+.navv-link {
+    flex: 1;
+    text-align: right;
+}
+
+.navv-link ul li {
+    list-style: none;
+    display: inline-block;
+    padding: 8px 12px;
+    position: relative;
+}
+
+.navv-link ul li a {
+    text-decoration: none;
+    color: #000;
+    font-size: 13px;
+}
+
+
+/* nav img{
+    width: 30%;
+    height: 30%;
+     
+} */
+
+img.logo {
+    width: 100px;
+    height: 100px;
+}
+
+.nav-link {
+    flex: 1;
+    text-align: right;
+}
+
+.nav-link ul li {
+    list-style: none;
+    display: inline-block;
+    padding: 8px 12px;
+    position: relative;
+}
+
+.nav-link ul li a {
+    text-decoration: none;
+    color: #000;
+    font-size: 13px;
+}
+
+.nav-link ul li::after {
+    content: "";
+    width: 0%;
+    height: 2px;
+    background: #000;
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+
+.nav-link ul li:hover::after {
+    width: 100%;
+}
+
+@media(max-width:700px) {
+    .text-box h1 {
+        font-size: 20px;
+    }
+    .nav-link ul li {
+        display: block;
+    }
+    .nav-link {
+        position: absolute;
+        background: #f4367f;
+        height: 100vh;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 2;
+        transition: 1s;
+    }
+    nav .fas {
+        display: block;
+        color: #fff;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+    }
+    .nav-link ul {
+        padding: 30px;
+    }
+}
+
+
+/* .navbar {
     background-color: #fff;
     height: 60px;
     ///width: 100%;
@@ -13,31 +123,21 @@
 .navbar a {
     color: #000;
     //faut que les liens soient un peu plus gros
-    font-size: 1.4em;
+    font-size: 1em;
     padding: 0 10px;
 }
 
 //les boutons à l'intérieur de la navbar  soient center par rapport au lien de la navbar
 .navbar .button {
     margin: 0 10px;
+    font-size: 1em;
 }
 
-.navbar-brand {
-    font-size: 1.5em;
-    color: #fff;
-    text-decoration: none;
-}
-
-.navbar-nav {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.navbar-item {
-    font-size: 1.2em;
-    color: #fff;
-    text-decoration: none;
-    padding: 0 10px;
-}
+@media screen and (max-width: 767px) {
+    .navbar .button {
+        display: block;
+    }
+    .navbar a {
+        display: none;
+    }
+} */
