--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -34,11 +34,6 @@ nav {
     font-size: 13px;
 }
 
-img.logo {
-    width: 100px;
-    height: 100px;
-}
-
 .nav-link {
     flex: 1;
     text-align: right;
@@ -80,7 +75,8 @@ img.logo {
     }
     .nav-link {
         position: absolute;
-        background: #f4367f;
+        //background blanc kaki 
+        background: rgba(255, 255, 255, 0.073);
         height: 100vh;
         top: 0;
         right: -200px;
@@ -90,7 +86,7 @@ img.logo {
     }
     nav .fas {
         display: block;
-        color: #fff;
+        color: #000;
         margin: 10px;
         font-size: 22px;
         cursor: pointer;
