--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -3,6 +3,7 @@
         margin: 0;
         padding: 0;
         font-family: 'Poppins', sans-serif;
+        overflow-x: hidden;
     }
     
     ul,
