--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -25,6 +25,13 @@
         height: 100px;
     }
     
+    @media(max-width: 700px) {
+        img.logo {
+            width: 50px;
+            height: 50px;
+        }
+    }
+    
     .header {
         min-height: 100vh;
         width: 100%;
