--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -1,7 +1,7 @@
 nav {
     display: flex;
     padding: 2% 6%;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     //rajouter des marges en haut et en bas
     margin: 0 0 0 0;
@@ -66,6 +66,14 @@ nav {
     width: 100%;
 }
 
+nav .fas {
+    display: none;
+}
+
+nav .fa-solid {
+    display: none;
+}
+
 @media(max-width:700px) {
     .text-box h1 {
         font-size: 20px;
@@ -85,6 +93,13 @@ nav {
         transition: 1s;
     }
     nav .fas {
+        display: block;
+        color: #000;
+        margin: 10px;
+        font-size: 22px;
+        cursor: pointer;
+    }
+    nav .fa-solid {
         display: block;
         color: #000;
         margin: 10px;
