--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -169,7 +169,7 @@ a {
 nav {
   display: flex;
   padding: 2% 6%;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   margin: 0 0 0 0;
   background-color: #fff;
