--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -1,7 +1,7 @@
 nav {
     display: flex;
     padding: 2% 6%;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     //rajouter des marges en haut et en bas
     margin: 0 0 0 0;
