--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -1,118 +1,119 @@
-nav {
-    display: flex;
-    padding: 2% 6%;
-    justify-content: space-between;
-    align-items: center;
-    //rajouter des marges en haut et en bas
-    margin: 0 0 0 0;
-    background-color: #fff;
-}
-
-.navv {
-    display: flex;
-    padding: 2% 6%;
-    align-items: center;
-    justify-content: flex-start;
-    justify-content: space-between;
-}
-
-.navv-link {
-    flex: 1;
-    text-align: right;
-}
-
-.navv-link ul li {
-    list-style: none;
-    display: inline-block;
-    padding: 8px 12px;
-    position: relative;
-}
-
-.navv-link ul li a {
-    text-decoration: none;
-    color: #000;
-    font-size: 13px;
-}
-
-.nav-link {
-    flex: 1;
-    text-align: right;
-}
-
-.nav-link ul li {
-    list-style: none;
-    display: inline-block;
-    padding: 8px 12px;
-    position: relative;
-}
-
-.nav-link ul li a {
-    text-decoration: none;
-    color: #000;
-    font-size: 13px;
-}
-
-.nav-link ul li::after {
-    content: "";
-    width: 0%;
-    height: 2px;
-    background: #000;
-    display: block;
-    margin: auto;
-    transition: 0.5s;
-}
-
-.nav-link ul li:hover::after {
-    width: 100%;
-}
-
-nav .fas {
-    display: none;
-}
-
-nav .fa-solid {
-    display: none;
-}
-
-@media(max-width:700px) {
-    .text-box h1 {
-        font-size: 20px;
+    nav {
+        display: flex;
+        padding: 0% 10%;
+        justify-content: space-between;
+        align-items: center;
+        //raputer une bordure en bas en gris
+        border-bottom: 1px solid rgba(225, 218, 218, 0.775);
     }
-    .nav-link ul li {
-        display: block;
+    
+    .navv {
+        display: flex;
+        padding: 2% 6%;
+        align-items: center;
+        justify-content: flex-start;
+        justify-content: space-between;
     }
+    
+    .navv-link {
+        flex: 1;
+        text-align: right;
+    }
+    
+    .navv-link ul li {
+        list-style: none;
+        display: inline-block;
+        padding: 8px 12px;
+        position: relative;
+    }
+    
+    .navv-link ul li a {
+        text-decoration: none;
+        color: #000;
+        font-size: 13px;
+    }
+    
     .nav-link {
-        position: absolute;
-        //background blanc kaki 
-        background: rgba(255, 255, 255, 0.073);
-        height: 100vh;
-        top: 0;
-        right: -200px;
-        text-align: left;
-        z-index: 2;
-        transition: 1s;
+        flex: 1;
+        text-align: right;
     }
+    
+    .nav-user {
+        display: none;
+    }
+    
+    .nav-link ul li {
+        list-style: none;
+        display: inline-block;
+        padding: 8px 12px;
+        position: relative;
+    }
+    
+    .nav-link ul li a {
+        text-decoration: none;
+        color: #000;
+        font-size: 13px;
+    }
+    
+    .nav-link ul li::after {
+        content: "";
+        width: 0%;
+        height: 2px;
+        background: #000;
+        display: block;
+        margin: auto;
+        transition: 0.5s;
+    }
+    
+    .nav-link ul li:hover::after {
+        width: 100%;
+    }
+    
     nav .fas {
-        display: block;
-        color: #000;
-        margin: 10px;
-        font-size: 22px;
-        cursor: pointer;
+        display: none;
     }
-    nav .fa-solid {
-        display: block;
-        color: #000;
-        margin: 10px;
-        font-size: 22px;
-        cursor: pointer;
+    
+    .fa-bars {
+        display: none;
     }
-    .nav-link ul {
-        padding: 30px;
+    
+    @media(max-width:700px) {
+        .text-box h1 {
+            font-size: 20px;
+        }
+        .nav-link ul li {
+            display: block;
+        }
+        .nav-link {
+            position: absolute;
+            //background blanc kaki 
+            background: rgba(255, 255, 255, 0.073);
+            height: 100vh;
+            top: 0;
+            right: -200px;
+            text-align: left;
+            z-index: 2;
+            transition: 1s;
+        }
+        nav .fas {
+            display: block;
+            color: #000;
+            margin: 10px;
+            font-size: 22px;
+            cursor: pointer;
+        }
+        .fa-bars {
+            display: block;
+            color: #000;
+            margin: 10px;
+            font-size: 22px;
+            cursor: pointer;
+        }
+        .nav-link ul {
+            padding: 30px;
+        }
     }
-}
-
-
-/* .navbar {
+    /* .navbar {
     background-color: #fff;
     height: 60px;
     ///width: 100%;
