--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -55,6 +55,14 @@
         font-size: 13px;
     }
     
+    .nav-link ul li button {
+        text-decoration: none;
+        list-style: none;
+        display: inline-block;
+        padding: 8px 12px;
+        position: relative;
+    }
+    
     .nav-link ul li::after {
         content: "";
         width: 0%;
