--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -1,14 +1,16 @@
 button {
-    background-color: $primary-color;
-    border: none;
-    border-radius: 4px;
-    color: $text-color;
-    cursor: pointer;
     display: inline-block;
-    font-size: 16px;
-    padding: 12px 24px;
-    text-align: center;
     text-decoration: none;
+    //background-color: $primary-color;
+    border-radius: 15px;
+    //color: $text-color;
+    cursor: pointer;
+    font-size: 16px;
+    text-align: center;
+    border: 1px solid #fff;
+    padding: 12px 34px;
+    font-size: 13px;
+    position: relative;
     &:hover {
         background-color: darken($primary-color, 10%);
     }
@@ -17,7 +19,7 @@ button {
     }
 }
 
-button.secondary {
+.button-secondary {
     background-color: $secondary-color;
     &:hover {
         background-color: darken($secondary-color, 10%);
@@ -27,7 +29,7 @@ button.secondary {
     }
 }
 
-button.warning {
+.button-warning {
     background-color: $warning-color;
     &:hover {
         background-color: darken($warning-color, 10%);
@@ -37,7 +39,7 @@ button.warning {
     }
 }
 
-button.info {
+.button-info {
     background-color: $info-color;
     &:hover {
         background-color: darken($info-color, 10%);
@@ -47,7 +49,7 @@ button.info {
     }
 }
 
-button.success {
+.button-success {
     background-color: $success-color;
     &:hover {
         background-color: darken($success-color, 10%);
