--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 body,
 html {
   margin: 0;
@@ -257,6 +256,10 @@ nav .fas {
   display: none;
 }
 
+.fa-user {
+  display: none;
+}
+
 @media (max-width: 700px) {
   .text-box h1 {
     font-size: 20px;
@@ -291,40 +294,48 @@ nav .fas {
   .nav-link ul {
     padding: 30px;
   }
-}
-/* .navbar {
-    background-color: #fff;
-    height: 60px;
-    ///width: 100%;
-    max-width: 100%;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0 20px;
-}
-
-.navbar a {
+  #button-nav {
+    display: none;
+  }
+  .fa-user {
+    display: block;
+    position: absolute;
+    left: 50%;
+    cursor: pointer;
+  }
+  .nav-user ul li {
+    display: block;
+  }
+  .nav-user ul {
+    padding: 30px;
+  }
+  .nav-user {
+    display: block;
+    position: absolute;
+    top: -200%;
+    right: 0;
+    background: #fff;
+    width: 200px;
+    text-align: left;
+    padding: 10px 0;
+    transition: 0.5s;
+    transform: translateY(24%);
+  }
+  .nav-user ul li a {
+    display: block;
+    padding: 10px 20px;
     color: #000;
-    //faut que les liens soient un peu plus gros
-    font-size: 1em;
-    padding: 0 10px;
+    text-decoration: none;
+  }
 }
-
-//les boutons à l'intérieur de la navbar  soient center par rapport au lien de la navbar
-.navbar .button {
-    margin: 0 10px;
-    font-size: 1em;
+@media (min-width: 700px) {
+  .fa-bars {
+    display: none;
+  }
+  .fa-user {
+    display: none;
+  }
 }
-
-@media screen and (max-width: 767px) {
-    .navbar .button {
-        display: block;
-    }
-    .navbar a {
-        display: none;
-    }
-} */
 button {
   display: inline-block;
   text-decoration: none;
