--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -1,48 +1,46 @@
-    body,
-    html {
-        margin: 0;
-        padding: 0;
-        font-family: 'Poppins', sans-serif;
-        overflow-x: hidden;
-    }
-    
-    ul,
-    ol {
-        margin-bottom: 20px;
-        padding-left: 20px;
-    }
-    
-    //pour bien use nos col 
-    .row {
-        clear: both;
-        max-width: 100%;
-        margin-right: auto;
-        margin-left: auto;
-    }
-    
-    .logo {
-        //diminuer la taille de l'image
-        width: 65px;
-        height: 65px;
-    }
-    /* img.logo {
-        width: 100px;
-        height: 100px;
-        //diminuer la taille de l'image
-    } */
-    
-    @media(max-width: 700px) {
-        img.logo {
-            width: 50px;
-            height: 50px;
-        }
-    }
-    
-    .header {
-        min-height: 100vh;
-        width: 100%;
-        //background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(../../images/background_image.png);
-        background-position: center;
-        background-size: cover;
-        position: relative;
-    }
+                        body,
+                        html {
+                            margin: 0;
+                            padding: 0;
+                            font-family: 'Poppins', sans-serif;
+                            overflow-x: hidden;
+                        }
+                        
+                        //remplie toute la section header avec l'image
+                        .header {
+                            background-image: url(../../assets/images/background_image.png);
+                            //background-image: linear-gradient(rgba(30, 5, 4, 0.7), rgba(30, 4, 4, 0.7)), url(../../assets/images/background.jpeg);
+                            background-position: center;
+                            background-repeat: no-repeat;
+                            background-size: cover;
+                            height: 100vh;
+                            width: 100%;
+                            position: relative;
+                        }
+                        
+                        ul,
+                        ol {
+                            margin-bottom: 20px;
+                            padding-left: 20px;
+                        }
+                        
+                        //pour bien use nos col 
+                        .row {
+                            clear: both;
+                            max-width: 100%;
+                            margin-right: auto;
+                            margin-left: auto;
+                        }
+                        
+                        .logo {
+                            //diminuer la taille de l'image
+                            width: 65px;
+                            height: 65px;
+                        }
+                        
+                        @media(max-width: 700px) {
+                            .logo {
+                                width: 50px;
+                                height: 50px;
+                            }
+                        }
