--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -12,6 +12,7 @@
 @import './utilities/mixins';
 @import './utilities/functions';
 //components
+@import'./components/slider';
 @import './components/buttons';
 @import './components/forms';
 @import './components/tables';
