--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -316,7 +316,7 @@ nav .fas {
     text-align: left;
     padding: 10px 0;
     transition: 0.5s;
-    transform: translateY(24%);
+    transform: translateY(14%);
   }
   .nav-user ul li a {
     display: block;
@@ -357,6 +357,13 @@ nav .fas {
   }
   100% {
     transform: translateX(0);
+  }
+}
+@media (max-width: 700px) {
+  .slider {
+    width: 300px;
+    overflow: hidden;
+    margin: 10px auto;
   }
 }
 button {
