--- a/assets/sass/components/_slider.scss
+++ b/assets/sass/components/_slider.scss
@@ -24,3 +24,12 @@
         transform: translateX(0);
     }
 }
+
+@media(max-width:700px) {
+    .slider {
+        //divise la taille de l'image par 2
+        width: 300px;
+        overflow: hidden;
+        margin: 10px auto;
+    }
+}
