--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -315,7 +315,8 @@ nav .fas {
     width: 200px;
     text-align: left;
     padding: 10px 0;
-    transition: 0.5s;
+    z-index: 2;
+    transition: 1s;
     transform: translateY(14%);
   }
   .nav-user ul li a {
