--- a/assets/sass/layout/_navbar.scss
+++ b/assets/sass/layout/_navbar.scss
@@ -151,7 +151,8 @@
                 width: 200px;
                 text-align: left;
                 padding: 10px 0;
-                transition: 0.5s;
+                z-index: 2;
+                transition: 1s;
                 //le deplacer vers le bas
                 transform: translateY(14%);
             }
