--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,7 @@ html {
   background-image: url(../../assets/images/background_nba.png);
   background-position: center;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
   height: 100vh;
   width: 100%;
   position: relative;
