--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -12,10 +12,11 @@
                             //background-image: linear-gradient(rgba(30, 5, 4, 0.7), rgba(30, 4, 4, 0.7)), url(../../assets/images/background.jpeg);
                             background-position: center;
                             background-repeat: no-repeat;
-                            background-size: cover;
+                            background-size: 100% 100%;
                             height: 100vh;
                             width: 100%;
                             position: relative;
+                            //pour que l'image ne soit pas mal placé sur un grand écran
                         }
                         
                         ul,
