--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -10,9 +10,9 @@
                         .header {
                             background-image: url(../../assets/images/background_nba.png);
                             //background-image: linear-gradient(rgba(30, 5, 4, 0.7), rgba(30, 4, 4, 0.7)), url(../../assets/images/background.jpeg);
-                            background-position: center;
+                            background-position: center top;
                             background-repeat: no-repeat;
-                            background-size: 100% 100%;
+                            background-size: cover;
                             height: 100vh;
                             width: 100%;
                             position: relative;
@@ -43,5 +43,16 @@
                             .logo {
                                 width: 50px;
                                 height: 50px;
+                            }
+                            .header {
+                                background-image: url(../../assets/images/background_nba.png);
+                                //background-image: linear-gradient(rgba(30, 5, 4, 0.7), rgba(30, 4, 4, 0.7)), url(../../assets/images/background.jpeg);
+                                background-position: center;
+                                background-repeat: no-repeat;
+                                background-size: cover;
+                                height: 100vh;
+                                width: 100%;
+                                position: relative;
+                                //pour que l'image ne soit pas mal placé sur un grand écran
                             }
                         }
