--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -1,53 +1,16 @@
-                        body,
-                        html {
-                            margin: 0;
-                            padding: 0;
-                            font-family: 'Poppins', sans-serif;
-                            overflow-x: hidden;
-                        }
-                        
-                        //remplie toute la section header avec l'image
-                        .header {
-                            background-image: url(../../assets/images/background_nba.png);
-                            //background-image: linear-gradient(rgba(30, 5, 4, 0.7), rgba(30, 4, 4, 0.7)), url(../../assets/images/background.jpeg);
-                            background-position: center top;
-                            background-repeat: no-repeat;
-                            background-size: cover;
-                            height: 100vh;
-                            width: 100%;
-                            position: relative;
-                            //pour que l'image ne soit pas mal placé sur un grand écran
-                        }
-                        
-                        ul,
-                        ol {
-                            margin-bottom: 20px;
-                            padding-left: 20px;
-                        }
-                        
-                        //pour bien use nos col 
-                        .row {
-                            clear: both;
-                            max-width: 100%;
-                            margin-right: auto;
-                            margin-left: auto;
-                        }
-                        
-                        .logo {
-                            //diminuer la taille de l'image
-                            width: 65px;
-                            height: 65px;
-                        }
-                        
-                        @media(max-width: 700px) {
-                            .logo {
-                                width: 50px;
-                                height: 50px;
+                            body,
+                            html {
+                                margin: 0;
+                                padding: 0;
+                                font-family: 'Poppins', sans-serif;
+                                overflow-x: hidden;
                             }
+                            
+                            //remplie toute la section header avec l'image
                             .header {
                                 background-image: url(../../assets/images/background_nba.png);
                                 //background-image: linear-gradient(rgba(30, 5, 4, 0.7), rgba(30, 4, 4, 0.7)), url(../../assets/images/background.jpeg);
-                                background-position: center;
+                                background-position: center top;
                                 background-repeat: no-repeat;
                                 background-size: cover;
                                 height: 100vh;
@@ -55,4 +18,82 @@
                                 position: relative;
                                 //pour que l'image ne soit pas mal placé sur un grand écran
                             }
-                        }
+                            
+                            ul,
+                            ol {
+                                margin-bottom: 20px;
+                                padding-left: 20px;
+                            }
+                            
+                            //pour bien use nos col 
+                            .row {
+                                clear: both;
+                                max-width: 100%;
+                                margin-right: auto;
+                                margin-left: auto;
+                            }
+                            
+                            .logo {
+                                //diminuer la taille de l'image
+                                width: 65px;
+                                height: 65px;
+                            }
+                            
+                            .text-box {
+                                //width: 100px;
+                                //width: 100%;
+                                color: white;
+                                position: absolute;
+                                //top: 50%;
+                                left: 50%;
+                                transform: translate(-50%, -50%);
+                            }
+                            
+                            .text-box h1 {
+                                font-size: 40px;
+                                font-weight: 700;
+                                text-transform: uppercase;
+                                letter-spacing: 5px;
+                                margin-bottom: 20px;
+                                display: flex;
+                                justify-content: center;
+                            }
+                            
+                            @media(max-width: 700px) {
+                                .logo {
+                                    width: 50px;
+                                    height: 50px;
+                                }
+                                .header {
+                                    background-image: url(../../assets/images/background_nba.png);
+                                    //background-image: linear-gradient(rgba(30, 5, 4, 0.7), rgba(30, 4, 4, 0.7)), url(../../assets/images/background.jpeg);
+                                    background-position: center;
+                                    background-repeat: no-repeat;
+                                    background-size: cover;
+                                    height: 100vh;
+                                    width: 100%;
+                                    position: relative;
+                                    //pour que l'image ne soit pas mal placé sur un grand écran
+                                }
+                                .text-box {
+                                    //width: 100px;
+                                    //width: 100%;
+                                    color: white;
+                                    position: absolute;
+                                    top: 70%;
+                                    left: 50%;
+                                    transform: translate(-50%, -50%);
+                                    //agrandir la taille de la police
+                                    font-size: 50px;
+                                }
+                                .text-box h1 {
+                                    font-size: 40px;
+                                    font-weight: 700;
+                                    text-transform: uppercase;
+                                    letter-spacing: 5px;
+                                    margin-bottom: 20px;
+                                    display: flex;
+                                    justify-content: center;
+                                    //top: 70%;
+                                }
+                            }
