add animation to header section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,6 +51,22 @@ ol {
   justify-content: center;
 }
 
+.text-box span {
+  display: flex;
+  justify-content: center;
+  opacity: 0;
+  animation: reveal 1s forwards 0.5s;
+}
+
+@keyframes reveal {
+  from {
+    translate: 0 100%;
+  }
+  to {
+    translate: none;
+    opacity: 1;
+  }
+}
 @media (max-width: 700px) {
   .logo {
     width: 50px;
@@ -81,6 +97,13 @@ ol {
     margin-bottom: 20px;
     display: flex;
     justify-content: center;
+  }
+  .text-box span {
+    display: flex;
+    justify-content: center;
+    opacity: 0;
+    animation: reveal 1s forwards 0.5s;
+    font-size: 15px;
   }
 }
 @font-face {
