--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -59,6 +59,23 @@
                                 justify-content: center;
                             }
                             
+                            .text-box span {
+                                display: flex;
+                                justify-content: center;
+                                opacity: 0;
+                                animation: reveal 1s forwards 0.5s;
+                            }
+                            
+                            @keyframes reveal {
+                                from {
+                                    translate: 0 100%;
+                                }
+                                to {
+                                    translate: none;
+                                    opacity: 1;
+                                }
+                            }
+                            
                             @media(max-width: 700px) {
                                 .logo {
                                     width: 50px;
@@ -95,5 +112,12 @@
                                     display: flex;
                                     justify-content: center;
                                     //top: 70%;
+                                }
+                                .text-box span {
+                                    display: flex;
+                                    justify-content: center;
+                                    opacity: 0;
+                                    animation: reveal 1s forwards 0.5s;
+                                    font-size: 15px;
                                 }
                             }
