add animation to header section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,6 +49,8 @@ ol {
   margin-bottom: 20px;
   display: flex;
   justify-content: center;
+  opacity: 0;
+  animation: reveal2 1s forwards 0.5s;
 }
 
 .text-box span {
@@ -59,6 +61,15 @@ ol {
 }
 
 @keyframes reveal {
+  from {
+    translate: 0 100%;
+  }
+  to {
+    translate: none;
+    opacity: 1;
+  }
+}
+@keyframes reveal2 {
   from {
     translate: 0 100%;
   }
